--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,1 +1,18 @@
-<h1>Create your page here</h1>
+<ul>
+  <li>
+    <span>Empire Burlesque</span>
+    <p>
+      Bob Dylan
+    </p>
+    <span>UK</span>
+    <p>
+      CBS Records
+    </p>
+     <p>
+      9.9
+    </p>
+     <p>
+      1988
+    </p>
+  </li>
+</ul>
