--- a/app/song-list/song-list.template.html
+++ b/app/song-list/song-list.template.html
@@ -8,13 +8,14 @@
 
         <form class="navbar-form navbar-left border-right">
             <div class="form-group">
-                <input type="text" class="form-control"  ng-model="$ctrl.query" placeholder="Search">
+                <input type="text" class="form-control" ng-model="$ctrl.query" placeholder="Search">
             </div>
         </form>
         <p class="navbar-text"> Sort by:</p>
         <form class="navbar-form navbar-left border-right">
             <div class="form-group">
-                <select  class="form-control" ng-model="$ctrl.orderProp">
+                <select class="form-control" ng-model="$ctrl.orderProp">
+                    <option value="id">Id</option>
                     <option value="title">Title</option>
                     <option value="artist">Artist</option>
                     <option value="country">Country</option>
@@ -27,14 +28,17 @@
         <p class="navbar-text border-right">Initial count in db {{$ctrl.initCount}}</p>
         <p class="navbar-text border-right">Current count in db {{$ctrl.count}}</p>
 
+        <p class="btn btn-primary add-new" ng-click="addNew()">+ Add new</p>
+
     </div>
 </nav>
 
 <div class="container-fluid content">
     <div class="row">
         <div class="card-group">
-            <div class="card col-3 col-sm-6 col-md-4 col-lg-3" ng-repeat="song in $ctrl.songs | filter:$ctrl.query | orderBy:$ctrl.orderProp">
-                <a href="#!/songs/{{song.id}}" class="thumb">
+            <div class="card col-3 col-sm-6 col-md-4 col-lg-3"
+                 ng-repeat="song in $ctrl.songs | filter:$ctrl.query | orderBy:$ctrl.orderProp">
+                <a href="#!/songs/update/{{song.id}}" class="thumb">
                     <img class="card-img-top" src="{{$ctrl.getRightImageURL(song.logoUrl)}}" alt="{{song.title}}">
                 </a>
 
@@ -46,8 +50,8 @@
                     <p class="card-text"> Price: {{song.price}}</p>
                     <p class="card-text"> Year: {{song.year}}</p>
                     <div class="card-block">
-                        <a href="#!/songs/{{song.id}}"  class="btn btn-primary">Details</a>
-                        <a href="#"  ng-click="delete(song.id)" class="card-link danger delete">Delete</a>
+                        <a href="#!/songs/update/{{song.id}}" class="btn btn-primary">Details</a>
+                        <a href="#" ng-click="delete(song.id)" class="card-link danger delete">Delete</a>
                     </div>
                     <p class="card-text">
                         <small class="text-muted">id : {{song.id}}</small>
